ENH: renaming praxix to ITKTools

--- a/src/averagevectormagnitude/CMakeLists.txt
+++ b/src/averagevectormagnitude/CMakeLists.txt
@@ -1,13 +1,13 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(averagevectormagnitude)
+PROJECT( averagevectormagnitude )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxaveragevectormagnitude averagevectormagnitude.cxx)
+ADD_EXECUTABLE( pxaveragevectormagnitude averagevectormagnitude.cxx )
 
-TARGET_LINK_LIBRARIES(pxaveragevectormagnitude ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxaveragevectormagnitude ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxaveragevectormagnitude
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
