--- a/src/binaryimageoperator/CMakeLists.txt
+++ b/src/binaryimageoperator/CMakeLists.txt
@@ -1,23 +1,23 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(binaryimageoperator)
+PROJECT( binaryimageoperator )
 
 # Increases address capacity
 IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
 ENDIF ( WIN32 )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxbinaryimageoperator
+ADD_EXECUTABLE( pxbinaryimageoperator
  binaryimageoperator.cxx
  itkBinaryFunctors.h
  BinaryImageOperatorHelper.h
- BinaryImageOperatorMainHelper.h)
+ BinaryImageOperatorMainHelper.h )
 
-TARGET_LINK_LIBRARIES(pxbinaryimageoperator pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxbinaryimageoperator pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxbinaryimageoperator
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
