--- a/src/castconvert/CMakeLists.txt
+++ b/src/castconvert/CMakeLists.txt
@@ -1,11 +1,11 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(castconvert)
+PROJECT( castconvert )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcastconvert
+ADD_EXECUTABLE( pxcastconvert
  castconvert.cxx
  castconvertScalar.cxx
  castconvertDicomScalarA.cxx
@@ -35,11 +35,11 @@ ADD_EXECUTABLE(pxcastconvert
  castconvertMultiComponent4D3CB.cxx
  castconvertMultiComponent4D4CA.cxx
  castconvertMultiComponent4D4CB.cxx
-)
+ )
 
-TARGET_LINK_LIBRARIES(pxcastconvert pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcastconvert pxcommon ${ITK_LIBRARIES} )
 
 
 INSTALL( TARGETS pxcastconvert
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
