--- a/src/closestversor3Dtransform/CMakeLists.txt
+++ b/src/closestversor3Dtransform/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(closestversor3Dtransform)
+PROJECT( closestversor3Dtransform )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxclosestversor3Dtransform closestversor3Dtransform.cxx)
+ADD_EXECUTABLE( pxclosestversor3Dtransform closestversor3Dtransform.cxx )
 
-TARGET_LINK_LIBRARIES(pxclosestversor3Dtransform pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxclosestversor3Dtransform pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxclosestversor3Dtransform
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
