--- a/src/combinesegmentations/CMakeLists.txt
+++ b/src/combinesegmentations/CMakeLists.txt
@@ -1,11 +1,11 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(combinesegmentations)
+PROJECT( combinesegmentations )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcombinesegmentations
+ADD_EXECUTABLE( pxcombinesegmentations
  combinesegmentations.cxx
  itkLabelVoting2ImageFilter.h
  itkLabelVoting2ImageFilter.txx
@@ -14,10 +14,10 @@ ADD_EXECUTABLE(pxcombinesegmentations
  itkMultiLabelSTAPLE2ImageFilter.h
  itkMultiLabelSTAPLE2ImageFilter.txx
  itkNaryUnequalityTestImageFilter.h
-)
+ )
 
-TARGET_LINK_LIBRARIES(pxcombinesegmentations pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcombinesegmentations pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcombinesegmentations
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
