--- a/src/contrastenhanceimage/CMakeLists.txt
+++ b/src/contrastenhanceimage/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(contrastenhanceimage)
+PROJECT( contrastenhanceimage )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcontrastenhanceimage contrastenhanceimage.cxx contrastenhanceimage.h)
+ADD_EXECUTABLE( pxcontrastenhanceimage contrastenhanceimage.cxx contrastenhanceimage.h )
 
-TARGET_LINK_LIBRARIES(pxcontrastenhanceimage ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcontrastenhanceimage ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcontrastenhanceimage
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
