--- a/src/countnonzerovoxels/CMakeLists.txt
+++ b/src/countnonzerovoxels/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(CountNonZeroVoxels)
+PROJECT( CountNonZeroVoxels )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcountnonzerovoxels countnonzerovoxels.cxx)
+ADD_EXECUTABLE( pxcountnonzerovoxels countnonzerovoxels.cxx )
 
-TARGET_LINK_LIBRARIES(pxcountnonzerovoxels ${ITK_LIBRARIES} pxcommon )
+TARGET_LINK_LIBRARIES( pxcountnonzerovoxels ${ITK_LIBRARIES} pxcommon )
 
 INSTALL( TARGETS pxcountnonzerovoxels
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
