--- a/src/createsphere/CMakeLists.txt
+++ b/src/createsphere/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(CreateSphere)
+PROJECT( CreateSphere )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcreatesphere createsphere.cxx)
+ADD_EXECUTABLE( pxcreatesphere createsphere.cxx )
 
-TARGET_LINK_LIBRARIES(pxcreatesphere pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcreatesphere pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcreatesphere
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
