--- a/src/cropimage/CMakeLists.txt
+++ b/src/cropimage/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(cropimage)
+PROJECT( cropimage )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcropimage cropimage.cxx)
+ADD_EXECUTABLE( pxcropimage cropimage.cxx )
 
-TARGET_LINK_LIBRARIES(pxcropimage pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcropimage pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcropimage
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
