--- a/src/deformationfieldgenerator/CMakeLists.txt
+++ b/src/deformationfieldgenerator/CMakeLists.txt
@@ -1,20 +1,20 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(deformationfieldgenerator)
+PROJECT( deformationfieldgenerator )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxdeformationfieldgenerator
+ADD_EXECUTABLE( pxdeformationfieldgenerator
  deformationfieldgenerator.cxx
  itkMeshFileReaderBase.h
  itkMeshFileReaderBase.txx
  itkTransformixInputPointFileReader.h
  itkTransformixInputPointFileReader.hxx
-)
+ )
 
-TARGET_LINK_LIBRARIES(pxdeformationfieldgenerator pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxdeformationfieldgenerator pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxdeformationfieldgenerator
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
