--- a/src/extractindexfromvectorimage/CMakeLists.txt
+++ b/src/extractindexfromvectorimage/CMakeLists.txt
@@ -1,20 +1,20 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(extractindexfromvectorimage)
+PROJECT( extractindexfromvectorimage )
 
 # Increases address capacity
 IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
 ENDIF ( WIN32 )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxextractindexfromvectorimage extractindexfromvectorimage.cxx)
+ADD_EXECUTABLE( pxextractindexfromvectorimage extractindexfromvectorimage.cxx )
 
-TARGET_LINK_LIBRARIES(pxextractindexfromvectorimage pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxextractindexfromvectorimage pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxextractindexfromvectorimage
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
