--- a/src/intensitywindowing/CMakeLists.txt
+++ b/src/intensitywindowing/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(intensitywindowing)
+PROJECT( intensitywindowing )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxintensitywindowing intensitywindowing.cxx)
+ADD_EXECUTABLE( pxintensitywindowing intensitywindowing.cxx )
 
-TARGET_LINK_LIBRARIES(pxintensitywindowing pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxintensitywindowing pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxintensitywindowing
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
