--- a/src/logicalimageoperator/CMakeLists.txt
+++ b/src/logicalimageoperator/CMakeLists.txt
@@ -1,5 +1,5 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(logicalimageoperator)
+PROJECT( logicalimageoperator )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
@@ -10,8 +10,8 @@ ADD_EXECUTABLE( pxlogicalimageoperator
   itkLogicalFunctors.h
   LogicalImageOperatorHelper.h )
 
-TARGET_LINK_LIBRARIES( pxlogicalimageoperator pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxlogicalimageoperator pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxlogicalimageoperator
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
