--- a/src/morphology/CMakeLists.txt
+++ b/src/morphology/CMakeLists.txt
@@ -1,17 +1,17 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(morphology)
+PROJECT( morphology )
 
 # Increases address capacity
 IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
 ENDIF ( WIN32 )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxmorphology
+ADD_EXECUTABLE( pxmorphology
   morphology.cxx
   morphology2D.cxx
   morphology3D.cxx
@@ -22,10 +22,10 @@ ADD_EXECUTABLE(pxmorphology
 	opening.h
 	closing.h
 	gradient.h
-)
+ )
 
-TARGET_LINK_LIBRARIES(pxmorphology pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxmorphology pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxmorphology
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
