--- a/src/reflect/CMakeLists.txt
+++ b/src/reflect/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(reflect)
+PROJECT( reflect )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxreflect reflect.cxx )
+ADD_EXECUTABLE( pxreflect reflect.cxx )
 
-TARGET_LINK_LIBRARIES(pxreflect pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxreflect pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxreflect
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
