--- a/src/segmentationdistance/CMakeLists.txt
+++ b/src/segmentationdistance/CMakeLists.txt
@@ -1,17 +1,18 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(segmentationdistance)
+PROJECT( segmentationdistance )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxsegmentationdistance segmentationdistance.cxx
- itkCartesianToSphericalCoordinateImageFilter.h
- itkCartesianToSphericalCoordinateImageFilter.txx
- )
+ADD_EXECUTABLE( pxsegmentationdistance
+  segmentationdistance.cxx
+  itkCartesianToSphericalCoordinateImageFilter.h
+  itkCartesianToSphericalCoordinateImageFilter.txx
+)
 
-TARGET_LINK_LIBRARIES(pxsegmentationdistance pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxsegmentationdistance pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxsegmentationdistance
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
