--- a/src/texture/CMakeLists.txt
+++ b/src/texture/CMakeLists.txt
@@ -1,17 +1,17 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(texture)
+PROJECT( texture )
 
 # Increases address capacity
 IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
 ENDIF ( WIN32 )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxtexture
+ADD_EXECUTABLE( pxtexture
  texture.cxx
  itkTextureImageToImageFilter.h
  itkTextureImageToImageFilter.txx
@@ -20,8 +20,8 @@ ADD_EXECUTABLE(pxtexture
  itkGrayLevelCooccurrenceMatrixTextureCoefficientsCalculator.h
  itkGrayLevelCooccurrenceMatrixTextureCoefficientsCalculator.txx )
 
-TARGET_LINK_LIBRARIES(pxtexture pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxtexture pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxtexture
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
