--- a/src/tileimages/CMakeLists.txt
+++ b/src/tileimages/CMakeLists.txt
@@ -1,5 +1,5 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(tileimages)
+PROJECT( tileimages )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
@@ -8,10 +8,10 @@ INCLUDE( ${ITK_USE_FILE} )
 
 # could not convert template argument error
 
-ADD_EXECUTABLE(pxtileimages tileimages.cxx)
+ADD_EXECUTABLE( pxtileimages tileimages.cxx )
 
-TARGET_LINK_LIBRARIES(pxtileimages pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxtileimages pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxtileimages
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
