--- a/src/ttest/CMakeLists.txt
+++ b/src/ttest/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(ttest)
+PROJECT( ttest )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxttest ttest.cxx)
+ADD_EXECUTABLE( pxttest ttest.cxx )
 
-TARGET_LINK_LIBRARIES(pxttest pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxttest pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxttest
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
