--- a/src/unaryimageoperator/CMakeLists.txt
+++ b/src/unaryimageoperator/CMakeLists.txt
@@ -1,11 +1,11 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(unaryimageoperator)
+PROJECT( unaryimageoperator )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxunaryimageoperator
+ADD_EXECUTABLE( pxunaryimageoperator
  unaryimageoperator.cxx
  unaryimageoperatorScalar.cxx
  unaryimageoperatorScalar2DA.cxx
@@ -14,10 +14,10 @@ ADD_EXECUTABLE(pxunaryimageoperator
  unaryimageoperatorScalar3DB.cxx
  itkUnaryFunctors.h
  UnaryImageOperatorHelper.h
- UnaryImageOperatorMainHelper.h)
+ UnaryImageOperatorMainHelper.h )
 
-TARGET_LINK_LIBRARIES(pxunaryimageoperator pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxunaryimageoperator pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxunaryimageoperator
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
