--- a/src/binarythinning/CMakeLists.txt
+++ b/src/binarythinning/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(binarythinning)
+PROJECT( binarythinning )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxbinarythinning binarythinning.cxx)
+ADD_EXECUTABLE( pxbinarythinning binarythinning.cxx )
 
-TARGET_LINK_LIBRARIES(pxbinarythinning pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxbinarythinning pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxbinarythinning
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
