--- a/src/computeboundingbox/CMakeLists.txt
+++ b/src/computeboundingbox/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(computeboundingbox)
+PROJECT( computeboundingbox )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcomputeboundingbox computeboundingbox.cxx)
+ADD_EXECUTABLE( pxcomputeboundingbox computeboundingbox.cxx )
 
-TARGET_LINK_LIBRARIES(pxcomputeboundingbox pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcomputeboundingbox pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcomputeboundingbox
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
