--- a/src/creategridimage/CMakeLists.txt
+++ b/src/creategridimage/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(creategridimage)
+PROJECT( creategridimage )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxcreategridimage creategridimage.cxx)
+ADD_EXECUTABLE( pxcreategridimage creategridimage.cxx )
 
-TARGET_LINK_LIBRARIES(pxcreategridimage pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxcreategridimage pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcreategridimage
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
