--- a/src/getdicominformation/CMakeLists.txt
+++ b/src/getdicominformation/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(getdicominformation)
+PROJECT( getdicominformation )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxgetdicominformation getdicominformation.cxx)
+ADD_EXECUTABLE( pxgetdicominformation getdicominformation.cxx )
 
-TARGET_LINK_LIBRARIES(pxgetdicominformation pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxgetdicominformation pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxgetdicominformation
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
