--- a/src/getpointsinimage/CMakeLists.txt
+++ b/src/getpointsinimage/CMakeLists.txt
@@ -1,14 +1,14 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(GetPointsInImage)
+PROJECT( GetPointsInImage )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxgetpointsinimage getpointsinimage.cxx)
+ADD_EXECUTABLE( pxgetpointsinimage getpointsinimage.cxx )
 
-TARGET_LINK_LIBRARIES(pxgetpointsinimage ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxgetpointsinimage ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxgetpointsinimage
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
