--- a/src/intensityreplace/CMakeLists.txt
+++ b/src/intensityreplace/CMakeLists.txt
@@ -1,16 +1,16 @@
 # This project is intended to be built outside the Insight source tree
-PROJECT(intensityreplace)
+PROJECT( intensityreplace )
 
 # Find ITK.
 FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
-ADD_EXECUTABLE(pxintensityreplace
+ADD_EXECUTABLE( pxintensityreplace
   intensityreplace.cxx
-)
+ )
 
-TARGET_LINK_LIBRARIES(pxintensityreplace pxcommon ${ITK_LIBRARIES})
+TARGET_LINK_LIBRARIES( pxintensityreplace pxcommon ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxintensityreplace
-  RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
+  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
 
